# modular-governance

./: .gitignore  Anchor.toml  CHANGELOG.md  Cargo.toml  Procfile  README.md  buffer  docs.json  lerna.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.root.json  tsconfig.test.json  typedoc.base.json  typedoc.json
.github/actions/setup/: action.yaml
.github/actions/setup-anchor/: action.yaml
.github/workflows/: develop-release-program.yaml  release-program.yaml  tests.yaml
docs/: README.md  modules.md
programs/nft_delegation/: Cargo.toml
programs/nft_delegation/src/: error.rs  lib.rs  state.rs
programs/nft_delegation/src/instructions/: delegate_v0.rs  initialize_delegation_config_v0.rs  mod.rs  undelegate_v0.rs
programs/nft_proxy/: Cargo.toml
programs/nft_proxy/src/: error.rs  lib.rs  state.rs
programs/nft_proxy/src/instructions/: assign_proxy_v0.rs  close_expired_proxy_v0.rs  initialize_proxy_config_v0.rs  mod.rs  unassign_expired_proxy_v0.rs  unassign_proxy_v0.rs  update_proxy_config_v0.rs
programs/nft_voter/: Cargo.toml
programs/nft_voter/src/: lib.rs  metaplex.rs  state.rs
programs/nft_voter/src/instructions/: delegated_relinquish_vote_v0.rs  delegated_vote_v0.rs  initialize_nft_voter_v0.rs  mod.rs  proxied_relinquish_vote_v0.rs  proxied_vote_v0.rs  relinquish_vote_v0.rs  update_nft_voter_v0.rs  vote_v0.rs
programs/organization/: Cargo.toml
programs/organization/src/: lib.rs  state.rs
programs/organization/src/instructions/: initialize_organization_v0.rs  initialize_proposal_v0.rs  mod.rs  update_organization_v0.rs
programs/organization_wallet/: Cargo.toml
programs/organization_wallet/src/: error.rs  lib.rs  state.rs
programs/organization_wallet/src/instructions/: execute_transaction_v0.rs  initialize_organization_wallet_v0.rs  initialize_proposal_v0.rs  initialize_wallet_proposal_v0.rs  mod.rs  set_transactions_v0.rs  update_organization_wallet_v0.rs
programs/organizations/: Cargo.toml
programs/organizations/src/: lib.rs  state.rs
programs/organizations/src/instructions/: initialize_organization_v0.rs  mod.rs
programs/proposal/: Cargo.toml
programs/proposal/src/: errors.rs  lib.rs  state.rs
programs/proposal/src/instructions/: initialize_proposal_config_v0.rs  initialize_proposal_v0.rs  mod.rs  resolve_v0.rs  update_proposal_config_v0.rs  update_state_v0.rs  vote_v0.rs
programs/resolution/: Cargo.toml
programs/resolution/src/: errors.rs  lib.rs
programs/resolution/src/instructions/: initialize_resolution_settings_v0.rs  on_vote_v0.rs
programs/state_controller/: Cargo.toml
programs/state_controller/src/: error.rs  lib.rs  state.rs
programs/state_controller/src/instructions/: initialize_resolution_settings_v0.rs  mod.rs  on_vote_v0.rs  resolve_v0.rs  start_vote_v0.rs  update_state_v0.rs
programs/token_voter/: Cargo.toml
programs/token_voter/src/: error.rs  lib.rs  metaplex.rs  state.rs
programs/token_voter/src/instructions/: deposit_v0.rs  initialize_token_voter_v0.rs  mod.rs  relinquish_vote_v0.rs  vote_v0.rs  withdraw_v0.rs
programs/vote_hook_interface/: Cargo.toml
programs/vote_hook_interface/src/: lib.rs
scripts/: bootstrap.sh  convert-tests.ts  generate-idl-docs.ts  init-idls.sh  migrate-docs.ts  upgrade-idls.sh
tests/: modular-governance.ts  nft-voter.ts  organization-wallet.ts  organization.ts  proposal.ts  state-controller.ts  token-voter.ts  utils.ts
