[package]
name = "nft-voter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_voter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []
serde-feature = ["serde"]

[dependencies]
anchor-lang = { git = "https://github.com/ChewingGlass/anchor", branch = "bugfix/cpi-polymorphism", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/ChewingGlass/anchor", branch = "bugfix/cpi-polymorphism", features = ["token"] }
proposal = { path = "../proposal", features = ["no-entrypoint", "cpi"] }
nft-proxy = { path = "../nft_proxy", features = ["cpi"] }
serde = { version = "1.0", features = ["derive"], optional = true }
time = "0.3.36"